Contact page fixed; title page re-aligned.

--- a/css/main.css
+++ b/css/main.css
@@ -2826,7 +2826,7 @@ blockquote {
 }
 
 .title-block {
-  margin-bottom: 165px;
+  margin-bottom: 200px;
   position: relative;
   text-align: center;
 }
